Update interpretation notes in index.html

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     </div>
 
     <div class="note">
-        <strong>결과 해석 참고(Spectre-v4을 판단하는 간접적인 방법이며, 실제 보안 상태는 다를 수 있음)</strong>
+        <strong>결과 해석 참고 (Spectre-v4을 판단하는 간접적인 방법이며, 실제 보안 상태는 다를 수 있음)</strong>
         <ul>
-            <li>Spectre 강력한 완화 적용: 0.1ms (100 µs) 이상</li>
-            <li>Spectre 일반적 완화 적용: 0.02ms (20 µs) 이상</li>
-            <li>Spectre 완화 미적용: 0.001ms (1 µs) 수준</li>
+            <li>강력한 완화 적용: 0.1ms (100 µs)</li>
+            <li>일반적 완화 적용: 0.02ms (20 µs)</li>
+            <li>완화 미적용: 0.005ms (5 µs)</li>
         </ul>
     </div>
 </div>
