Log measured precision and interpretation to console
Add console logs for measured precision and interpretation

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@ function measurePrecision() {
             <br>
             결과 해석: ${interpretation}
         `;
+        console.log(`측정된 정밀도: ${minDeltaMicroseconds} µs (마이크로초)`);
+        console.log(`결과 해석: ${interpretation}`);
     }
 }
 
